   + It is a very simple layer type that is not Exported and only serves to make custom annotations for display in the editor view, or as markers for scripts or complex operations
   + The new patterned layer rendering support described above also applies to these new Custom Annotation Layers
   + Since they are not Exported they are not visible on the Custom Layers tabs of the Export screen

-- Version 2.19.0, released 5-8-2023

 * The name and layer order of palettes can now be edited by clicking on the cog icon in their top-right corner
 * The 3D view can now be configured to show: all above-ground layers (the default, and what it previously showed), no layers, or to be synchronised with the visible layers in the editor, using the new radio buttons on the toolbar
 * If the 3D view is set to be "always on top" when a new window is opened, the "always on top" option is turned off, to prevent the 3D view from blocking or obscuring the new window
 * Bug fix: fix the Annotations colours and colour names on the Import Mask screen

-- Version 2.18.4, released 27-6-2023

 * Bug fix: restore order of custom layers on palettes

-- Version 2.18.3, released 23-6-2023

 * The custom layer export order can now be reset to the default with the new Reset Order button on the Custom Layers tab on the Export screen
   + If the button is disabled then the layers are already in their default order
   + Export order customisation is not a well defined functionality and should be used with caution. The default order might change in the future, and it is currently the case that if you customise the order, all the non-custom layers (such as the default cave layers) are then exported _after_ all the custom layers for each stage
 * Halves of double high plants such as sunflowers that are missing their opposite halves will now be left in place if you uncheck the "remove from invalid blocks" setting on the Post Processing tab of the Export screen